--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
   </section>
 
   <section id="about-head" class="section-p1">
-    <img src="img/about/a4.jpg" alt="">
+    <img src="img/about/a4.png" alt="">
     <div>
       <h2>Who We Are?</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
